--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
 
+    <title> Aileen's Portfolio Website </title>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</head>
 
 
 
