--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
-
+    <meta name="description" content="Simple demo Web page for CSE 134B" />
+	<meta name="keywords" content="HTML, CSS, JavaScript" />
     <title> Aileen's Portfolio Website </title>
 
 </head>
+
 
 
 
