--- a/index.html
+++ b/index.html
@@ -2,15 +2,83 @@
 <html lang="en">
 
 <head>
-    <title> Aileen's Portfolio Website </title>
+    <meta charset="UTF-8">
+    <title>Aileen's Portfolio Website</title>
+    <!-- <link rel="stylesheet" href="styles.css">
+    <script defer src="scripts.js"></script> -->
 </head>
 
 <body>
-    <header> Hey, I'm Aileen Fong </header>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="views.html">Views</a></li>
+                <li><a href="curiosity.html">Curiosity</a></li>
+                <li><a href="experiments.html">Experiments</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <hr>
+
+    <main>
+         <section>
+            <h1>Hello there! It's Aileen Fong</h1>
+            <picture>
+                <source media="(max-width: 480px)" srcset="images/Aileen-mobile.jpg">
+                <source media="(max-width: 768px)" srcset="images/Aileen-tablet.jpg">
+                <img src="images/Aileen.jpg" alt="Aileen Fong's Portrait" width="150" loading="lazy">
+            </picture>            
+            <h2>A line of statement</h2>
+        </section>
+
+        <h2>Experience</h2>
+
+        <section>
+            <h3>Effectiver</h3>
+            <h4>Designer/Product Manager</h4>
+            <ol>
+                <li>Details 1</li>
+                <li>Details 2</li>
+                <li>Details 3</li>
+            </ol>
+        </section>
+        <hr>
+        <section>
+            <h3>XtendedReality Lab</h3>
+            <h4>Undergraduate Researcher</h4>
+            <ol>
+                <li>Details 1</li>
+                <li>Details 2</li>
+                <li>Details 3</li>
+            </ol>
+        </section>
+        <hr>
+         <section>
+            <h3>De Anza College Writing and Reading Center</h3>
+            <h4>Reading and Writing Tutor</h4>
+            <ol>
+                <li>Details 1</li>
+                <li>Details 2</li>
+                <li>Details 3</li>
+            </ol>
+        </section>
+
+    </main>
+
+    <footer>
+        <ul>
+            <li><a href="https://www.instagram.com/yourInstagramUsername/" target="_blank" rel="noopener noreferrer"><img src="path_to_instagram_icon.png" alt="Instagram icon"> Instagram</a></li>
+            <li><a href="https://github.com/yourGithubUsername" target="_blank" rel="noopener noreferrer"><img src="path_to_github_icon.png" alt="GitHub icon"> GitHub</a></li>
+            <li><a href="https://medium.com/@yourMediumUsername" target="_blank" rel="noopener noreferrer"><img src="path_to_medium_icon.png" alt="Medium icon"> Medium</a></li>
+        </ul>
+        <p>&copy; 2023 Aileen Fong</p>
+    </footer>
+    
+
 </body>
-
-
-
-
 
 </html>
