added meta tags for search and math formula

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Aileen's Portfolio Website</title>
+
+    <meta name="description" content="Reach out to Aileen Fong for collaborations, inquiries, or just to say hello.">
+    <meta property="og:title" content="Contact Aileen Fong">
+    <meta property="og:description" content="Looking to get in touch with Aileen Fong? Find all contact methods and details here.">
+    <meta property="og:image" content="path_to_contact_thumbnail_image.jpg">
+
 </head>
 
 <body>
