--- a/curiosity.html
+++ b/curiosity.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <title>Aileen's Portfolio Website</title> 
 
+    <meta name="description" content="Discover what sparks Aileen Fong's curiosity, from intriguing web technologies to broader digital trends.">
+    <meta property="og:title" content="Aileen's Curiosities">
+    <meta property="og:description" content="Journey into the inquisitive mind of Aileen Fong and find out what keeps her inspired and driven in the tech world.">
+    <meta property="og:image" content="path_to_curiosity_thumbnail_image.jpg">
+
+
     <style>
         /* demonstrate use of <style> */
         section {
