--- a/experiments.html
+++ b/experiments.html
@@ -21,6 +21,19 @@
 
 <body>
 
+    <!-- Einstein's famous formula -->
+    <h2>Einstein's Famous Formula</h2>
+    <math>
+        <mi>E</mi>
+        <mo>=</mo>
+        <mi>m</mi>
+        <mo>×</mo>
+        <msup>
+          <mi>c</mi>
+          <mn>2</mn>
+        </msup>
+      </math>
+      
     <!-- Demonstrating <canvas> -->
     <h2>Canvas Example</h2>
     <canvas id="myCanvas" width="200" height="100" style="border:1px solid black;"></canvas>
