--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Aileen's Portfolio Website</title>
     <!-- <link rel="stylesheet" href="styles.css">
     <script defer src="scripts.js"></script> -->
+
+    <meta name="description" content="Learn more about Aileen Fong, a passionate web developer with a range of skills and experiences.">
+     <!-- Facebook -->
+    <meta property="og:title" content="About Aileen Fong">
+    <meta property="og:description" content="Discover the journey and story of Aileen Fong in the world of web development.">
+    <meta property="og:image" content="path_to_about_thumbnail_image.jpg">
 </head>
 
 <body>
