--- a/views.html
+++ b/views.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Aileen's Portfolio Website</title>
+    <meta name="description" content="Dive into Aileen Fong's thoughts on various topics, from web development trends to personal insights.">
+    <meta property="og:title" content="Aileen's Views">
+    <meta property="og:description" content="Aileen Fong shares her perspective on a variety of subjects, offering unique insights and reflections.">
+    <meta property="og:image" content="path_to_views_thumbnail_image.jpg">
+
 </head>
 
 
