--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Aileen's Portfolio Website</title>
+
+    <meta name="description" content="Explore a range of projects created by Aileen Fong, showcasing skills from web development to content creation.">
+    <meta property="og:title" content="Aileen's Projects">
+    <meta property="og:description" content="A portfolio of Aileen Fong's most notable projects. Dive in to see her expertise and creativity in action.">
+    <meta property="og:image" content="path_to_projects_thumbnail_image.jpg">
+
 </head>
 
 <body>
