--- a/curiosity.html
+++ b/curiosity.html
@@ -44,7 +44,7 @@
                 </div>
             </a>
             <details>
-                <summary><span>Topic:</span> Product</summary>
+                <summary><h2><span>Topic:</span> Product</h2></summary>
                 <p><span>Description:</span> Content to expect</p>
             </details>
         </section>
@@ -56,7 +56,7 @@
                 </div>
             </a>
             <details>
-                <summary><span>Topic:</span> Content Generation</summary>
+                <summary><h2><span>Topic:</span> Content Generation</h2></summary>
                 <p><span>Description:</span> Content to expect</p>
             </details>
         </section>
@@ -68,7 +68,7 @@
                 </div>
             </a>
             <details>
-                <summary><span>Topic:</span> Culture Sustainability</summary>
+                <summary><h2><span>Topic:</span> Culture Sustainability</h2></summary>
                 <p><span>Description:</span> Content to expect</p>
             </details>
         </section>
