corrected validation errors

--- a/curiosity.html
+++ b/curiosity.html
@@ -85,9 +85,9 @@
         <h1>My Fuels</h1>
         <ul>
             <li><a href="path-to-my-reflection-blog-post.html">My Reflection</a></li>
-            <li>Book Name</a></li>
-            <li>Book Name</a></li>
-            <li>Book Name</a></li>
+            <li>Book Name</li>
+            <li>Book Name</li>
+            <li>Book Name</li>
         </ul>
 
     </main>
