update css files

--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Aileen's Portfolio Website</title>
     <!-- <link rel="stylesheet" href="css/styles.css"> -->
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/about.css">
     <!-- <script defer src="scripts.js"></script> --> 
 
     <meta name="description" content="Learn more about Aileen Fong, a passionate web developer with a range of skills and experiences.">
