--- a/html/index.html
+++ b/html/index.html
@@ -28,12 +28,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="views.html">Views</a></li>
-                <li><a href="curiosity.html">Curiosity</a></li>
-                <li><a href="experiments.html">Experiments</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">About</a></li>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./views.html">Views</a></li>
+                <li><a href="./curiosity.html">Curiosity</a></li>
+                <li><a href="./experiments.html">Experiments</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
