responsive design test

--- a/html/index.html
+++ b/html/index.html
@@ -4,23 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Aileen's Portfolio Website</title>
-    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/about.css">
     <!-- <script defer src="scripts.js"></script> --> 
 
     <meta name="description" content="Learn more about Aileen Fong, a passionate web developer with a range of skills and experiences.">
-     <!-- Facebook -->
+    
+    <!-- Facebook -->
     <meta property="og:title" content="About Aileen Fong">
     <meta property="og:description" content="Discover the journey and story of Aileen Fong in the world of web development.">
     <meta property="og:image" content="path_to_about_thumbnail_image.jpg">
-
-    <style>
-        
-    </style>
-
    
-
 </head>
 
 <body>
@@ -85,9 +79,13 @@
 
     <footer>
         <ul>
-            <li><a href="https://www.instagram.com/yourInstagramUsername/" target="_blank" rel="noopener noreferrer"><img src="path_to_instagram_icon.png" alt="Instagram icon"> Instagram</a></li>
-            <li><a href="https://github.com/yourGithubUsername" target="_blank" rel="noopener noreferrer"><img src="path_to_github_icon.png" alt="GitHub icon"> GitHub</a></li>
-            <li><a href="https://medium.com/@yourMediumUsername" target="_blank" rel="noopener noreferrer"><img src="path_to_medium_icon.png" alt="Medium icon"> Medium</a></li>
+            <li><a href="https://www.instagram.com/yourInstagramUsername/" target="_blank"
+                    rel="noopener noreferrer"><img src="images/instagram.svg" alt="Instagram icon"> Instagram</a>
+            </li>
+            <li><a href="https://github.com/yourGithubUsername" target="_blank" rel="noopener noreferrer"><img
+                        src="images/github.svg" alt="GitHub icon"> GitHub</a></li>
+            <li><a href="https://medium.com/@yourMediumUsername" target="_blank" rel="noopener noreferrer"><img
+                        src="images/medium.svg" alt="Medium icon"> Medium</a></li>
         </ul>
         <p>&copy; 2023 Aileen Fong</p>
     </footer>
