--- a/html/projects.html
+++ b/html/projects.html
@@ -70,12 +70,12 @@
     <footer>
         <ul>
             <li><a href="https://www.instagram.com/yourInstagramUsername/" target="_blank"
-                    rel="noopener noreferrer"><img src="path_to_instagram_icon.png" alt="Instagram icon"> Instagram</a>
+                    rel="noopener noreferrer"><img src="images/instagram.svg" alt="Instagram icon"> Instagram</a>
             </li>
             <li><a href="https://github.com/yourGithubUsername" target="_blank" rel="noopener noreferrer"><img
-                        src="path_to_github_icon.png" alt="GitHub icon"> GitHub</a></li>
+                        src="images/github.svg" alt="GitHub icon"> GitHub</a></li>
             <li><a href="https://medium.com/@yourMediumUsername" target="_blank" rel="noopener noreferrer"><img
-                        src="path_to_medium_icon.png" alt="Medium icon"> Medium</a></li>
+                        src="images/medium.svg" alt="Medium icon"> Medium</a></li>
         </ul>
         <p>&copy; 2023 Aileen Fong</p>
     </footer>
