--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/about.css">
     <!-- <script defer src="scripts.js"></script> --> 
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta name="description" content="Learn more about Aileen Fong, a passionate web developer with a range of skills and experiences.">
     
     <!-- Facebook -->
