update responsive design

--- a/html/projects.html
+++ b/html/projects.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/projects.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta name="description"
         content="Explore a range of projects created by Aileen Fong, showcasing skills from web development to content creation.">
     <meta property="og:title" content="Aileen's Projects">
