--- a/html/views.html
+++ b/html/views.html
@@ -5,7 +5,7 @@
     <title>Aileen's Portfolio Website</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/views.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="Dive into Aileen Fong's thoughts on various topics, from web development trends to personal insights.">
     <meta property="og:title" content="Aileen's Views">
@@ -83,15 +83,13 @@
 
     <footer>
         <ul>
-            <li><a href="https://www.instagram.com/yourInstagramUsername/" target="_blank" rel="noopener noreferrer">
-                <img src="path_to_instagram_icon.png" alt="Instagram icon"> Instagram
-            </a></li>
-            <li><a href="https://github.com/yourGithubUsername" target="_blank" rel="noopener noreferrer">
-                <img src="path_to_github_icon.png" alt="GitHub icon"> GitHub
-            </a></li>
-            <li><a href="https://medium.com/@yourMediumUsername" target="_blank" rel="noopener noreferrer">
-                <img src="path_to_medium_icon.png" alt="Medium icon"> Medium
-            </a></li>
+            <li><a href="https://www.instagram.com/yourInstagramUsername/" target="_blank"
+                    rel="noopener noreferrer"><img src="images/instagram.svg" alt="Instagram icon"> Instagram</a>
+            </li>
+            <li><a href="https://github.com/yourGithubUsername" target="_blank" rel="noopener noreferrer"><img
+                        src="images/github.svg" alt="GitHub icon"> GitHub</a></li>
+            <li><a href="https://medium.com/@yourMediumUsername" target="_blank" rel="noopener noreferrer"><img
+                        src="images/medium.svg" alt="Medium icon"> Medium</a></li>
         </ul>
         <p>&copy; 2023 Aileen Fong</p>
     </footer>
