--- a/html/contact.html
+++ b/html/contact.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/contact.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta name="description" content="Reach out to Aileen Fong for collaborations, inquiries, or just to say hello.">
     <meta property="og:title" content="Contact Aileen Fong">
     <meta property="og:description"
