--- a/html/curiosity.html
+++ b/html/curiosity.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/curiosity.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta name="description"
         content="Discover what sparks Aileen Fong's curiosity, from intriguing web technologies to broader digital trends.">
     <meta property="og:title" content="Aileen's Curiosities">
