--- a/html/experiments.html
+++ b/html/experiments.html
@@ -6,6 +6,8 @@
     <title>Aileen's Portfolio Website</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/experiments.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
