--- a/html/curiosity.html
+++ b/html/curiosity.html
@@ -49,7 +49,11 @@
                 <a href="path-to-product-related-blog-post.html" class="library-link"
                     aria-label="Read my product related blogs">
                     <div class="area-picture">
-                        <img src="path_to_product_image.jpg" alt="Image related to product">
+                        <picture>
+                            <source media="(max-width: 480px)" srcset="images/dd.jpg" width="100">
+                            <source media="(max-width: 768px)" srcset="images/dd.jpg" width="150">
+                            <img src="images/dd.jpg" alt="Image related to product" width="200" loading="lazy">
+                        </picture> 
                     </div>
                 </a>
                 <details>
@@ -63,7 +67,11 @@
                 <a href="path-to-content_generation-related-blog-post.html" class="library-link"
                     aria-label="Read my content generation related blogs">
                     <div class="area-picture">
-                        <img src="path_to_content_generation_image.jpg" alt="Image related to content generation">
+                        <picture>
+                            <source media="(max-width: 480px)" srcset="images/dd.jpg" width="100">
+                            <source media="(max-width: 768px)" srcset="images/dd.jpg" width="150">
+                            <img src="images/dd.jpg" alt="Image related to product" width="200" loading="lazy">
+                        </picture> 
                     </div>
                 </a>
                 <details>
@@ -76,7 +84,11 @@
                 <a href="path-to-culture-sustainability-related-blog-post.html" class="library-link"
                     aria-label="Read my culture sustainability related blogs">
                     <div class="area-picture">
-                        <img src="path_to_culture_sustainability.jpg" alt="Image related to culture sustainability">
+                        <picture>
+                            <source media="(max-width: 480px)" srcset="images/dd.jpg" width="100">
+                            <source media="(max-width: 768px)" srcset="images/dd.jpg" width="150">
+                            <img src="images/dd.jpg" alt="Image related to product" width="200" loading="lazy">
+                        </picture> 
                     </div>
                 </a>
                 <details>
