--- a/html/index.html
+++ b/html/index.html
@@ -39,8 +39,8 @@
             <h1>Hello there! It's Aileen Fong</h1>
             <picture>
                 <source media="(max-width: 480px)" srcset="images/Aileen.jpg" width="100">
-                <source media="(max-width: 768px)" srcset="images/Aileen.jpg">
-                <img src="images/Aileen.jpg" alt="Aileen Fong's Portrait" width="300" loading="lazy">
+                <source media="(max-width: 768px)" srcset="images/Aileen.jpg" width="150">
+                <img src="images/Aileen.jpg" alt="Aileen Fong's Portrait" width="200" loading="lazy">
             </picture>            
             <h2>A line of statement</h2>
         </section>
