--- a/html/projects.html
+++ b/html/projects.html
@@ -42,7 +42,11 @@
             <!-- Project 1 Summary -->
             <a href="project1-details.html" class="project-link">
                 <article>
-                    <img src="path_to_project1_image.jpg" alt="Project 1 Thumbnail">
+                    <picture>
+                        <source media="(max-width: 480px)" srcset="images/cleo_sleeping.jpg" width="100">
+                        <source media="(max-width: 768px)" srcset="images/cleo_sleeping.jpg" width="150">
+                        <img src="images/cleo_sleeping.jpg" alt="Project 1 Thumbnail" width="200" loading="lazy">
+                    </picture> 
                     <h2>Project 1 Title</h2>
                     <p>A short introduction or description of Project 1.</p>
                 </article>
@@ -51,7 +55,11 @@
             <!-- Project 2 Summary -->
             <a href="project2-details.html" class="project-link">
                 <article>
-                    <img src="path_to_project2_image.jpg" alt="Project 2 Thumbnail">
+                    <picture>
+                        <source media="(max-width: 480px)" srcset="images/cleo_sleeping.jpg" width="100">
+                        <source media="(max-width: 768px)" srcset="images/cleo_sleeping.jpg" width="150">
+                        <img src="images/cleo_sleeping.jpg" alt="Project 2 Thumbnail" width="200" loading="lazy">
+                    </picture> 
                     <h2>Project 2 Title</h2>
                     <p>A short introduction or description of Project 2.</p>
                 </article>
@@ -60,7 +68,11 @@
             <!-- Project 3 Summary -->
             <a href="project3-details.html" class="project-link"> <!-- Fixed the link here -->
                 <article>
-                    <img src="path_to_project3_image.jpg" alt="Project 3 Thumbnail">
+                    <picture>
+                        <source media="(max-width: 480px)" srcset="images/cleo_sleeping.jpg" width="100">
+                        <source media="(max-width: 768px)" srcset="images/cleo_sleeping.jpg" width="150">
+                        <img src="images/cleo_sleeping.jpg" alt="Project 3 Thumbnail" width="200" loading="lazy">
+                    </picture> 
                     <!-- Make sure this path is correct -->
                     <h2>Project 3 Title</h2>
                     <p>A short introduction or description of Project 3.</p>
