add h1 to view.css for validation

--- a/html/views.html
+++ b/html/views.html
@@ -30,6 +30,7 @@
         </nav>
     </header>
 
+    <h1>My Views</h1>
     <main class="blog-layout">
         <aside id="category-filter">
             <h3>Categories</h3>
