changed section to div in view.html for validation

--- a/html/views.html
+++ b/html/views.html
@@ -30,7 +30,6 @@
         </nav>
     </header>
 
-    <h1>My Views</h1>
     <main class="blog-layout">
         <aside id="category-filter">
             <h3>Categories</h3>
@@ -42,7 +41,7 @@
             </select>
         </aside>
 
-        <section class="blog-posts">
+        <div class="blog-posts">
             <article class="blog-post" data-category="English">
                 <a href="path-to-full-blog-post.html" class="blog-link" aria-label="Read more about Blog Post Title">
                     <picture>
@@ -95,7 +94,7 @@
                 </a>
             </article>
 
-        </section>
+        </div>
     </main>
 
     <footer>
