changed section to div in curiosity.html for validation

--- a/html/curiosity.html
+++ b/html/curiosity.html
@@ -63,7 +63,7 @@
             </section>
 
 
-            <section class="interest-area">
+            <div class="interest-area">
                 <a href="path-to-content_generation-related-blog-post.html" class="library-link"
                     aria-label="Read my content generation related blogs">
                     <div class="area-picture">
@@ -78,9 +78,9 @@
                     <summary>Content Generation</summary>
                     <p><span>Description:</span> Content to expect</p>
                 </details>
-            </section>
+            </div>
 
-            <section class="interest-area">
+            <div class="interest-area">
                 <a href="path-to-culture-sustainability-related-blog-post.html" class="library-link"
                     aria-label="Read my culture sustainability related blogs">
                     <div class="area-picture">
@@ -95,7 +95,7 @@
                     <summary>Culture Sustainability</summary>
                     <p><span>Description:</span> Content to expect</p>
                 </details>
-            </section>
+            </div>
 
         </div>
 
