changed section to div in curiosity.html for validation

--- a/html/curiosity.html
+++ b/html/curiosity.html
@@ -45,7 +45,7 @@
 
         <div class="interests-grid">
             <!-- ... [other content] ... -->
-            <section class="interest-area">
+            <div class="interest-area">
                 <a href="path-to-product-related-blog-post.html" class="library-link"
                     aria-label="Read my product related blogs">
                     <div class="area-picture">
@@ -60,7 +60,7 @@
                     <summary>Product Management</summary> <!-- Keep the topic inside the <summary> -->
                     <p>Description: Content to expect</p> <!-- Details revealed upon clicking -->
                 </details>
-            </section>
+            </div>
 
 
             <div class="interest-area">
