hamburger menu part 1 update

--- a/html/projects.html
+++ b/html/projects.html
@@ -21,17 +21,23 @@
 <body>
 
     <header>
-        <nav>
+        <!-- Hidden checkbox, used to handle the menu toggle -->
+        <input type="checkbox" id="menu-toggle" />
+
+        <!-- Hamburger icon -->
+        <label for="menu-toggle" class="hamburger">&#9776;</label>
+
+        <!-- The navigation menu -->
+        <nav class="menu">
             <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="views.html">Views</a></li>
-                <li><a href="curiosity.html">Curiosity</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">About</a></li>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./views.html">Views</a></li>
+                <li><a href="./curiosity.html">Curiosity</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <hr>
 
     <main>
         <h1>My Projects</h1>
